2007-12-11  Tom Tromey  <tromey@redhat.com>

	* gcc.c (execute): Call client_send_directory.
	(server_callback): Add argument.
	* server.c (client_send_directory): New function.
	(request_and_response): Handle '.' request.
	* server.h (client_send_directory): Declare.
	(server_callback): Add argument.
	* toplev.c (get_src_pwd): Ensure src_pwd is allocated.  Use
	getcwd.
	(clear_src_pwd): New function.
	(server_callback): Call it.  Add argument.  Set directory.

2007-12-11  Tom Tromey  <tromey@redhat.com>

	* c-typeck.c (require_complete_type): Now static.
	(build_function_call): Cast function type.
	(comptypes_internal): Use smashed type variant.
	(build_indirect_ref): Convert pointer type, not type of
	dereference.
	(really_start_incremental_init): Use smashed type variant.
	* c-tree.h (require_complete_type): Remove declaration.
	(C_SMASHED_TYPE_VARIANT): Rewrote.
	(C_SMASHED_VARIANT): Remove.
	* c-decl.c (grokdeclarator): Remove unused variable.
	(start_struct): Fix condition.
	(start_enum): Likewise.
	(declspecs_add_type): Use smashed variant of a typedef.
	(duplicate_decls): Use smashed type variant.
	(pushdecl): Likewise.

2007-12-04  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (c_gimple_diagnostics_recursively): Remove.
	(finish_function): Remove comment.
	* c-common.h (c_warn_unused_result_pass): Declare.
	(c_warn_unused_result): Delete declaration.
	* c-common.c (c_warn_unused_result): Now static.
	(run_warn_unused_result): New function.
	(c_warn_unused_result_pass): New global.
	Include tree-pass.h.
	* c-objc-common.h (LANG_HOOKS_POST_GIMPLIFY_PASS): New macro.
	* langhooks-def.h (LANG_HOOKS_POST_GIMPLIFY_PASS): New macro.
	(LANG_HOOKS_INITIALIZER): Use it.
	* langhooks.h (struct lang_hooks) <post_gimplify_pass>: New
	field.
	* tree-gimple.h (diagnose_omp_structured_block_errors): Remove
	declaration.
	* omp-low.c (diagnose_omp_structured_block_errors): Change return
	type.  Make static.  Don't set current_function_decl.